--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,5 +1,5 @@
 body{
-  background-color: #fff;
+  background-color: #e3f2fd;
   font-family: sans-serif;
 }
 h1{
@@ -7,7 +7,7 @@ h1{
   padding: 18px 0;
   text-align: center;
   font-size: 1.75rem;
- background-color: gray;
+ background-color:#5372F0;
 }
 .weather-input{
   display: flex;
@@ -17,25 +17,26 @@ h1{
   align-items: center;
   .cityInput{
       padding: 10px;
-      font-size: 2rem;
+      font-size: 1rem;
       font-weight: bold;
       border: 2px solid hsla(0, 0%, 20%, 0.3);
       border-radius: 10px;
       width:300px;
+      height: 40px;
   
   }
   .searchBtn{
       padding: 10px 20px;
       font-weight: bold;
       font-size: 1.5rem;
-      background-color: hsl(122, 39%, 50%);
+      background-color: #5372F0;
       color: #fff;
       width:200px;
       border: none;
       border-radius: 5px;
       cursor: pointer;
               &:hover{
-                background-color: hsl(122, 39%, 40%);
+                background-color: rgb(0, 76, 255);
               }
       
   }
@@ -55,7 +56,7 @@ h1{
   margin-left: 300px;
   color: black;
   padding: 50px;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.8);
   border-radius: 5px;
   justify-content: space-around;
   width: 400px;
@@ -79,8 +80,7 @@ h1{
       color: black;
       padding: 18px 16px;
       border-radius: 5px;
-      background-color: #fff;
-      //background-color: hsl(0, 0%, 95%);
+      background-color: rgba(255, 255, 255, 0.8);
       backdrop-filter: blur(10px);
       -webkit-backdrop-filter: blur(10px);
       width: calc(100%/5);
